--- a/odes.ipynb
+++ b/odes.ipynb
@@ -1847,7 +1847,7 @@
       "       ...,\n",
       "       [-1.91624863e-12],\n",
       "       [ 9.99999808e-06],\n",
-      "       [ 8.02465513e-13]]), 'sol': <function basic_solve_ivp.<locals>.<lambda> at 0x7f9da7de2ea0>}\n"
+      "       [ 8.02465513e-13]]), 'sol': <function basic_solve_ivp.<locals>.<lambda> at 0x7fdb8c8d3ea0>}\n"
      ]
     }
    ],
@@ -2657,7 +2657,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9da7d65f60>]"
+       "[<matplotlib.lines.Line2D at 0x7fdb8c82b0f0>]"
       ]
      },
      "execution_count": 8,
@@ -3487,7 +3487,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9da59ed390>]"
+       "[<matplotlib.lines.Line2D at 0x7fdb8a4da550>]"
       ]
      },
      "execution_count": 10,
@@ -4340,7 +4340,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9da7cf52b0>]"
+       "[<matplotlib.lines.Line2D at 0x7fdb8c7e5438>]"
       ]
      },
      "execution_count": 13,
@@ -5188,7 +5188,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9da7cd65f8>]"
+       "[<matplotlib.lines.Line2D at 0x7fdb8c7c7630>]"
       ]
      },
      "execution_count": 16,
@@ -6860,7 +6860,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9da7c40710>]"
+       "[<matplotlib.lines.Line2D at 0x7fdb8c732630>]"
       ]
      },
      "execution_count": 21,
@@ -7682,7 +7682,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9da7c4ab00>]"
+       "[<matplotlib.lines.Line2D at 0x7fdb8c6eaa90>]"
       ]
      },
      "execution_count": 23,
@@ -8517,7 +8517,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9da80b0e80>]"
+       "[<matplotlib.lines.Line2D at 0x7fdb8c721e10>]"
       ]
      },
      "execution_count": 25,
@@ -9342,7 +9342,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9da6f7ea58>]"
+       "[<matplotlib.lines.Line2D at 0x7fdb8c672c50>]"
       ]
      },
      "execution_count": 27,
@@ -10167,7 +10167,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9da6f4cd68>]"
+       "[<matplotlib.lines.Line2D at 0x7fdb8ba3deb8>]"
       ]
      },
      "execution_count": 29,
@@ -10983,7 +10983,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9da6ef26d8>]"
+       "[<matplotlib.lines.Line2D at 0x7fdb8b9e4860>]"
       ]
      },
      "execution_count": 30,
@@ -11818,7 +11818,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9da6f26f98>]"
+       "[<matplotlib.lines.Line2D at 0x7fdb8ba17cf8>]"
       ]
      },
      "execution_count": 31,
