--- a/JOSE/paper.bib
+++ b/JOSE/paper.bib
@@ -11,3 +11,18 @@
 	year = {1998},
 	note = {Published: Hardcover},
 }
+
+@online{CEWP,
+  author = {Sébastien Boisgérault},
+  title = {Control Engineering with Python},
+  year = 2022,
+  url = {https://github.com/boisgera/control-engineering-with-python},
+  urldate = {2022-08-31}
+}
+
+@online{MINES-MDSEE,
+  title = {Master's degree in Science and Executive Engineering},
+  author = {Mines Paris, PSL},
+  year = {2021},
+  url = {https://mines-paristech.eu/Admissions/Master-degree-in-science-and-engineering/},
+}
